Invalidate border-box sized objects when their content box changes dimensions.

If an object uses box-sizing:border-box then we need to invalidate it for
painting when its content box dimensions change. Otherwise we won't paint
changes in the size of the content box.

BUG=597194

Review URL: https://codereview.chromium.org/1837033002

Cr-Commit-Position: refs/heads/master@{#384983}

Former-commit-id: 4245c9bdfe18f0331a8e064c935f2ffacf0ec906